Updated atrributes in cores_attributes.html. Added all of the attributes in cores_attributes.txt.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -495,7 +495,7 @@
                     <td>Yes</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Anima Bonus (Enemy <span class="text-red-600 font-bold">Confused</span> )</td>
+                    <td>Anima Bonus (Enemy <span class="text-red-600 font-bold">Confused</span>)</td>
                     <td>B</td>
                     <td>A-</td>
                     <td>A+</td>
@@ -723,6 +723,14 @@
                 <!-- ==========
                 Data
                 ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td>Melee Damage vs. Scorched Enemy</td>
+                    <td>1.0%</td>
+                    <td>1.7%</td>
+                    <td>2.5%</td>
+                    <td>3.3%</td>
+                    <td>No</td>
+                </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>Melee Damage vs. Saturated Enemy</td>
                     <td>1.0%</td>
