Added picture_scrolls_attributes.txt and the respective buff / debuff icons. Adjusted content in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -590,7 +590,7 @@
                     <td>8.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><span class="text-uncommon-text-color">Untouched Onmyo</span></td>
+                    <td><span class="text-uncommon-text-color">Untouched Onmyo Magic</span></td>
                     <td>8.0 %</td>
                 </tr>
             </table>
@@ -664,6 +664,10 @@
                 Table Data
                 ========== -->
                 <tr class="even:bg-dark-gray-2">
+                    <td>Ailment Affliction Duration</td>
+                    <td>-25.0 %</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
                     <td>Amrita Earned</td>
                     <td>10.0 %</td>
                 </tr>
@@ -724,16 +728,8 @@
                     <td>100.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><span class="text-rare-text-color">Ailment Affliction Duration</span></td>
-                    <td>-25.0 %</td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
                     <td><span class="text-rare-text-color">Elemental Damage</span></td>
                     <td>7.0 %</td>
-                </tr>
-                <tr class="even:bg-dark-gray-2">
-                    <td><span class="text-rare-text-color">Increased Attack (Winded Enemy)</span></td>
-                    <td>-</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-exotic-text-color">Elemental Damage Taken (Guarding)</span></td>
@@ -746,6 +742,13 @@
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-exotic-text-color">Life Drain (Melee Kill)</span></td>
                     <td>360</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td><img class="inline mx-1" src="./img/buff_icon.png" alt="Buff icon">
+                        <span class="text-buff-text-color">Increased Attack</span> 
+                        <span class="text-exotic-text-color">(Winded Enemy)</span>
+                    </td>
+                    <td>-</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-divine-text-color">Finishing Flair</span></td>
@@ -1009,5 +1012,8 @@
 
 <!-- TODO -->
 <!--
-    - [Picture of Revenant grave that has a picture scroll]
+    - Replace the Main Picture Scroll Image with a non-glitched Scroll. The current image is glitched, and cannot be obtained in the game by regular means.
+    - [Picture of Revenant grave that has a picture scroll].
+    - Add the proper icons for the attributes.
+    - Add the proper colors for the attributes text.
 -->
