Added the lapis_icon.png. Added the respective lapis icon to lapis.html.

--- a/nioh2/world/underworld/lapis/lapis.html
+++ b/nioh2/world/underworld/lapis/lapis.html
@@ -406,7 +406,10 @@
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Total Lapis Lazuli required to max out the entire Blessings of the Departed table</td>
+                    <td><div class="flex flex-col items-center gap-3">
+                        <span>Total Lapis Lazuli required to max out the entire Blessings of the Departed table</span>
+                        <img class="scale-75" src="./img/lapis_icon.png" alt="Lapis icon">
+                    </div></td>
                     <td colspan="4"><span class="font-bold text-yellow-400">10,225 Lapis Lazuli Required</span></td>
                 </tr>
             </table>
