Updated the underworld and depths icons by adding a new underworld_logo.png. Deleted depths_logo, underworld_logo .png files. Added picture_scroll_drop.png Added more content to picture_scrolls_attributes.txt and picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -268,8 +268,15 @@
                 <span class="text-red-600 font-bold">What are Demon Parade Picture Scrolls?</span> Picture Scrolls are items that
                 randomly drop from enemies. They contain both general and Scroll specific attributes that will be applied to your 
                 character. Upon acquiring a Picture Scroll, the player unlocks the Picture Scroll slot in their character inventory. 
-                It is placed below the Accessories slots. 
+                It is placed below the Accessories slots. When Picture Scrolls drop they will drop as 
+                <span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#c3d4e2] to-[#768192]">Silver Rarity</span>
+                similar to Tea Utensils.
             </p>
+            <div class="flex flex-col items-center gap-3">
+                <img src="./img/picture_scroll_drop.png" alt="Picture Scroll drop">
+                <span class="italic text-slate-300 text-xl leading-relaxed">Scroll of the Damned drop</span>
+            </div>
+
             <img src="./img/picture_scroll_mid.png" alt="Full Picture Scroll Accessory">
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="text-red-600 font-bold">How to acquire Demon Parade Picture Scrolls?</span> The player must complete 
@@ -759,7 +766,7 @@
                     <td>-</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ethereal Drop Rate</span></td>
+                    <td><span class="text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Ethereal Item Drop Rate</span></td>
                     <td>A+</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
