--- a/nioh2/world/underworld/underworld_index.html
+++ b/nioh2/world/underworld/underworld_index.html
@@ -248,10 +248,10 @@
                 <!-- ==========
                 Floors of the Underworld (Button 1)
                 ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/floors/floors.html">
                     
-                    <img src="./img/underworld_logo.png" alt="">
+                    <img class="my-auto" src="../img/underworld_logo.png" alt="Underworld logo">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Floors of the Underworld</span>
                 </a>
@@ -259,10 +259,10 @@
                 <!-- ==========
                 Depths of the Underworld (Button 2)
                 ========== -->
-                <a class="mask group w-full p-3 flex flex-col items-center gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
+                <a class="mask group w-full p-3 flex flex-col items-center justify-end gap-4 rounded text-2xl bg-dark-gray hover:bg-medium-red"
                     href="https://liukang1080.github.io/gamewiki/nioh2/world/underworld/depths/depths.html">
                     
-                    <img src="./img/depths_logo.png" alt="">
+                    <img class="my-auto" src="../img/underworld_logo.png" alt="Underworld logo">
                     <span class="mask w-full p-2 text-center text-yellow-400 bg-dark-gray-2 rounded
                         group-hover:text-yellow-100 group-hover:bg-light-red">Depths of the Underworld</span>
                 </a>
