--- a/nioh2/world/underworld/depths/depths.html
+++ b/nioh2/world/underworld/depths/depths.html
@@ -252,6 +252,7 @@
     <section class="w-full my-12 lg:px-0 flex flex-col items-center">
         <div class="lg:max-w-section-width w-full flex flex-col items-center gap-8">
             <h2 class="py-4 px-4 lg:px-0 text-4xl text-yellow-400 font-extrabold text-center">Layout of the Depths of the Underworld</h2>
+            <img src="../../img/underworld_logo.png" alt="Underworld logo">
             <hr class="w-full h-[2px] bg-stone-600 border-0">
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
