Added Jizo Kodama images. Added more content to picture_scrolls_attributes.txt. Fixed attributes in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -274,7 +274,7 @@
             </p>
             <div class="flex flex-col items-center gap-3">
                 <img src="./img/picture_scroll_drop.png" alt="Picture Scroll drop">
-                <span class="italic text-slate-300 text-xl leading-relaxed">Scroll of the Damned drop</span>
+                <span class="italic text-slate-300 text-xl leading-relaxed">A Scroll of the Damned drop in the Depths of the Underworld</span>
             </div>
 
             <img src="./img/picture_scroll_mid.png" alt="Full Picture Scroll Accessory">
@@ -354,7 +354,7 @@
                     <span><span class="text-red-600 font-bold">Scrolls of the Demon:</span> Dream of the Demon</span>
                     <span><span class="text-red-600 font-bold">Scrolls of the Wise:</span> Dream of the Wise</span>
                     <span><span class="text-red-600 font-bold">Scrolls of the Nioh:</span> Dream of the Nioh - Underworld (Floors 1 - 108)</span>
-                    <span><span class="text-red-600 font-bold">Scrolls of the Damned:</span> Underworld Depths (Floors 1 - 30)</span>
+                    <span><span class="text-red-600 font-bold">Scrolls of the Damned:</span> Underworld Depths (Floors 1 - 30) (Only bosses drop Scrolls of the Damned)</span>
                 </div>
             </p>
 
@@ -494,7 +494,7 @@
                 Table Data
                 ========== -->
                 <tr class="even:bg-dark-gray-2">
-                    <td>Melee Ki Consumption</td>
+                    <td>Melee Attack Ki Consumption</td>
                     <td>-5.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
@@ -679,7 +679,7 @@
                     <td>10.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Amrita Guage Charge</td>
+                    <td>Amrita Gauge Charge</td>
                     <td>10.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
@@ -691,8 +691,8 @@
                     <td>-10.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Toughness</td>
-                    <td>15</td>
+                    <td>Elemental Damage Taken (Guarding)</td>
+                    <td>-15.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-uncommon-text-color">Anima Charge</span></td>
@@ -735,12 +735,12 @@
                     <td>100.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><span class="text-rare-text-color">Elemental Damage</span></td>
-                    <td>7.0 %</td>
+                    <td class="text-uncommon-text-color">Toughness</td>
+                    <td>15</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><span class="text-exotic-text-color">Elemental Damage Taken (Guarding)</span></td>
-                    <td>-15.0 %</td>
+                    <td><span class="text-rare-text-color">Elemental Damage</span></td>
+                    <td>7.0 %</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="text-exotic-text-color">Extend Curse Nullification</span></td>
