Updated the main scroll image in picture_scrolls.html. Updated a new image and deleted the old picture_scroll images. Updated content in picture_scrolls_attributes.txt.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -277,7 +277,10 @@
                 <span class="italic text-slate-300 text-xl leading-relaxed">A Scroll of the Damned drop in the Depths of the Underworld</span>
             </div>
 
-            <img src="./img/picture_scroll_mid.png" alt="Full Picture Scroll Accessory">
+            <div class="flex flex-col items-center gap-3">
+                <img src="./img/picture_scroll_full.png" alt="Full Picture Scroll Accessory">
+                <span class="italic text-slate-300 text-xl leading-relaxed">A Scroll of the Damned with the maximum number of attributes (6)</span>
+            </div>
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 <span class="text-red-600 font-bold">How to acquire Demon Parade Picture Scrolls?</span> The player must complete 
                 Dream of the Samurai (New Game) in order to have the chance at obtaining Picture Scrolls. Upon defeating enemies 
@@ -955,7 +958,7 @@
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td><span class="font-bold text-transparent bg-clip-text bg-gradient-to-b from-[#fdd365] to-[#fa7e38]">Path of the Ravenous</span></td>
-                    <td>Greatly recover health whenever you absorb Amrita (50 per orb). In exchange, your rate of earning Guage Amrita will be
+                    <td>Greatly recover health whenever you absorb Amrita (50 per orb). In exchange, your rate of earning Gauge Amrita will be
                         decreased by 20%.
                     </td>
                 </tr>
