Updated content in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -311,9 +311,9 @@
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
                 When a player obtains a Picture Scroll the Enemies that will appear in the Picture is listed at the bottom of the 
                 Scroll. The enemies that appear is randomly generated along with the level. Once a Scroll is obtained you cannot 
-                change the enemies that will appear in that Scroll. There are 2 major types of "missions" when it comes to Picture
-                Scrolls: 1) A few mobs and a major boss at the end. 2) Mobs that spawn in wave after 
-                wave with / without mini-bosses. 
+                change the enemies that will appear in that Scroll. There are 3 major types of "missions" when it comes to Picture
+                Scrolls: 1) Multiple major bosses back to back. 2) A few mobs and a major boss at the end. 3) Mobs that spawn in
+                wave after wave with / without mini-bosses. 
             </p>
 
             <!-- ==========
