Updated the spacing for an attribute and updated the TODO in picture_scrolls.html.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -754,7 +754,8 @@
                     <td>360</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td><img class="inline mx-1" src="./img/buff_icon.png" alt="Buff icon">
+                    <td>
+                        <img class="inline mx-1" src="./img/buff_icon.png" alt="Buff icon">
                         <span class="text-buff-text-color">Increased Attack</span> 
                         <span class="text-exotic-text-color">(Winded Enemy)</span>
                     </td>
@@ -1022,8 +1023,5 @@
 
 <!-- TODO -->
 <!--
-    - Replace the Main Picture Scroll Image with a non-glitched Scroll. The current image is glitched, and cannot be obtained in the game by regular means.
-    - [Picture of Revenant grave that has a picture scroll].
-    - Add the proper icons for the attributes.
-    - Add the proper colors for the attributes text.
+    - Add picture of Revenant grave that has a picture scroll.
 -->
