Updated classes in index.html.

--- a/index.html
+++ b/index.html
@@ -34,23 +34,22 @@
         
         <!-- Nioh 2 Card -->
         <a href="./nioh2/nioh2.html" class="group mask w-fit flex flex-col items-center bg-white border border-black">
-            <img src="./img/nioh2_card.png" alt="">
-            <span class="mt-4 mb-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Nioh 2 Wiki</span>
+            <img src="./img/nioh2_card.png" alt="Nioh 2 card image">
+            <span class="my-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Nioh 2 Wiki</span>
         </a>
 
         <!-- Wo Long Card -->
         <a href="./wolong/wolong.html" class="group mask w-fit flex flex-col items-center bg-white border border-black">
-            <img src="./img/wolong_card.png" alt="">
-            <span class="mt-4 mb-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Wo Long: Fallen Dynasty Wiki</span>
+            <img src="./img/wolong_card.png" alt="Wo Long: Fallen Dynasty card image">
+            <span class="my-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Wo Long: Fallen Dynasty Wiki</span>
         </a>
 
         <!-- Rise of the Ronin Card -->
         <a href="" class="group mask w-fit flex flex-col items-center bg-white border border-black">
-            <img src="./img/rotr_card.png" alt="">
-            <span class="mt-4 mb-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Rise of the Ronin</span>
+            <img src="./img/rotr_card.png" alt="Rise of Ronin card image">
+            <span class="my-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Rise of the Ronin Wiki</span>
         </a>
     </section>
-
 </body>
 </html>
 
@@ -59,7 +58,6 @@
     - Sorting Tabes JS:
         https://www.w3schools.com/howto/howto_js_sort_table.asp
 -->
-
 
 <!-- Credits -->
 <!--
