Added more content to picture_scrolls.html, and DOTSamurai_missions.txt.

--- a/nioh2/equipment/picture_scrolls/picture_scrolls.html
+++ b/nioh2/equipment/picture_scrolls/picture_scrolls.html
@@ -782,6 +782,32 @@
                     <td>-</td>
                 </tr>
             </table>
+
+            <!-- ==========
+            Known Special Rules
+            ========== -->
+            <h2 class="py-4 text-3xl text-yellow-400 font-extrabold text-center">Known Special Rules</h2>
+            <table class="bg-dark-gray border-collapse border border-solid border-stone-900 rounded-xl text-slate-300 text-xl font-tinos">
+                <!-- ==========
+                Header 
+                ========== -->
+                <tr>
+                    <th>Special Rule</th>
+                </tr>
+
+                <!-- ==========
+                Table Data
+                ========== -->
+                <tr class="even:bg-dark-gray-2">
+                    <td>Lucky Drop (GRACE)</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Lucky Drop Transferable Effects</td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>Divine+ Item Drop Rate</td>
+                </tr>
+            </table>
         </div>
     </section>
 
