Updated the text in the Description section in recommended_missions.html.

--- a/nioh2/world/missions/recommended_missions.html
+++ b/nioh2/world/missions/recommended_missions.html
@@ -264,9 +264,10 @@
             </div>
 
             <p class="place-self-start px-4 2xl:px-0 text-slate-300 text-xl leading-relaxed">
-                Below is a recommended list of missions to complete, seperated by each region. The main goal is to complete as 
-                few missions as possible, as fast as possilbe so that the Last region is unlocked. Completing 
-                <a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a> mission unlocks the next
+                The player must complete at least 18 missions to unlock the mission
+                <a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a> in the final region
+                (Afterglow). Below is a recommended list of missions to complete, seperated by each region. Completing 
+                <a class="text-sky-400 hover:text-sky-600" href="">In the Eye of the Beholder</a> unlocks the next
                 difficulty, and is required. We want to select short and fast missions. Generally these missions will be gauntlet
                 style / linear missions. If we can acquire Locks of Hair, or other very important items during these short 
                 missions then that would be optimal, but we will generally not go out of our way to get these items. We can always
