Updated content in cores_attributes .html and .txt files.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -675,7 +675,9 @@
                     <td>Yes</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Anima Charge</td>
+                    <td>
+                        <span class="text-uncommon-text-color">Anima Charge</span>
+                    </td>
                     <td>3.1%</td>
                     <td>4.0%</td>
                     <td>5.2%</td>
@@ -739,7 +741,9 @@
                     <td>Yes</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Anima Charge Bonus (Amrita Guage)</td>
+                    <td>
+                        <span class="text-rare-text-color">Anima Charge Bonus (Amrita Guage)</span>
+                    </td>
                     <td>C+</td>
                     <td>B</td>
                     <td>A-</td>
@@ -901,7 +905,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Strong Attack Damage
+                        <span class="text-exotic-text-color">Strong Attack Damage</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -936,7 +940,9 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Melee Damage vs. Poisoned Enemy
+                        Melee Damage vs. 
+                        <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                        <span class="text-debuff-text-color">Poisoned</span> Enemy
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -1655,7 +1661,7 @@
                     <td>No</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Crital Yokai Shift (Dark Realm)</td>
+                    <td>Critical Yokai Shift (Dark Realm)</td>
                     <td>30%</td>
                     <td>35%</td>
                     <td>41%</td>
@@ -1733,7 +1739,9 @@
                     <td>Yes</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Max Yokai Ability Ki Damage</td>
+                    <td>
+                        <span class="text-rare-text-color">Max Yokai Ability Ki Damage</span>
+                    </td>
                     <td>2.1%</td>
                     <td>3.2%</td>
                     <td>4.6%</td>
@@ -1886,7 +1894,9 @@
                     <td>No</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Rarity Inheritance</td>
+                    <td>
+                        <span class="text-divine-text-color">Rarity Inheritance (Soul Fusion)</span>
+                    </td>
                     <td>-</td>
                     <td>-</td>
                     <td>-</td>
@@ -1896,7 +1906,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Break
+                        <span class="text-rare-text-color">Break</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -1965,6 +1975,13 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
+                        <span class="text-exotic-text-color">Water Resistance</span> 
+                        <br>[Innate Stat / Cannot Be Rolled]
+                    </td>
+                </tr>
+                <tr class="even:bg-dark-gray-2">
+                    <td>
+                        <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
                         <span class="text-exotic-text-color">Poison Resistance</span> 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
@@ -1988,7 +2005,9 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Paralysis Accumulation 
+                        <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                        <span class="text-debuff-text-color">Paralysis</span>
+                        <span class="text-exotic-text-color">Accumulation (Enemy)</span> 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
