Added more content to cores_attributes .html and .txt files.

--- a/nioh2/equipment/soul_cores/cores_attributes.html
+++ b/nioh2/equipment/soul_cores/cores_attributes.html
@@ -898,7 +898,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Quick Attack Damage
+                        <span class="text-exotic-text-color">Quick Attack Damage</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -926,7 +926,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Active Skill Damage 
+                        <span class="text-exotic-text-color">Active Skill Damage</span> 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -970,7 +970,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Damage Bonus (Equipment Weight)
+                        <span class="text-exotic-text-color">Damage Bonus (Equipment Weight)</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -991,7 +991,9 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Melee Damage vs. Corrupted Enemy
+                        Melee Damage vs. 
+                        <img class="inline" src="./img/debuff_icon.png" alt="Debuff icon">
+                        <span class="text-debuff-text-color">Corrupted</span> Enemy
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -1579,7 +1581,9 @@
                     <td>Yes</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Enemy Sensor</td>
+                    <td>
+                        <span class="text-exotic-text-color">Enemy Sensor</span>
+                    </td>
                     <td>-</td>
                     <td>-</td>
                     <td>-</td>
@@ -1773,7 +1777,11 @@
                     <td>No</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
-                    <td>Increased Ki Recovery (Yokai Ability Hit)</td>
+                    <td>
+                        <img class="inline" src="./img/buff_icon.png" alt="Buff icon">
+                        <span class="text-buff-text-color">Faster Ki Recovery</span> 
+                        <span class="text-divine-text-color">(Yokai Ability Hit)</span>
+                    </td>
                     <td>-</td>
                     <td>-</td>
                     <td>-</td>
@@ -1927,13 +1935,13 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Stealth
+                        <span class="text-exotic-text-color">Stealth</span>
                         <br>[Innate Stat / Cannot Be Rolled]</td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Dash Ki Consumption 
+                        <span class="text-uncommon-text-color">Dash Ki Consumption</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -1961,7 +1969,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        <span class="text-exotic-text-color">Copy Enhancement</span> 
+                        <span class="text-exotic-text-color">Copy Enhancement</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -1975,14 +1983,14 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        <span class="text-exotic-text-color">Water Resistance</span> 
+                        <span class="text-exotic-text-color">Water Resistance</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        <span class="text-exotic-text-color">Poison Resistance</span> 
+                        <span class="text-exotic-text-color">Poison Resistance</span>
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -2099,7 +2107,7 @@
                 <tr class="even:bg-dark-gray-2">
                     <td>
                         <img class="inline" src="./img/special_effect_icon.png" alt="Special Effect icon">
-                        Scampuss Escort Duration 
+                        <span class="text-uncommon-text-color">Scampuss Escort Duration</span> 
                         <br>[Innate Stat / Cannot Be Rolled]
                     </td>
                 </tr>
@@ -2245,7 +2253,7 @@
             <hr class="w-full h-[2px] bg-stone-600 border-0">
             
             <div class="flex flex-col gap-2 text-slate-300 text-xl">
-                <span>LiuKang1080, Ocean Machine, LOLSAN, dwbl, neverhere, Peter, KitPes, Lynch</span>
+                <span>LiuKang1080, Ocean Machine, Oninomiru, LOLSAN, dwbl, neverhere, Peter, KitPes, Lynch</span>
                 
                 <span class="bold-text">
                     <a class="text-sky-400 hover:text-sky-600" href="https://docs.google.com/spreadsheets/d/1Nc2wvXZHrOqf_IvHWlPiFI4CJ_p1fFtFnKUJlxYllls/edit#gid=488141566"
