Added the new main card image wolong_card_2.png in root/img/. Updated the src link for the wolong card in index.html. Added more content to picture_scrolls_attributes.txt.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Wo Long Card -->
         <a href="./wolong/wolong.html" class="group mask w-fit flex flex-col items-center bg-white border border-black">
-            <img src="./img/wolong_card.png" alt="Wo Long: Fallen Dynasty card image">
+            <img src="./img/wolong_card_2.png" alt="Wo Long: Fallen Dynasty card image">
             <span class="my-4 font-bold text-xl text-sky-700 group-hover:text-sky-500">Wo Long: Fallen Dynasty Wiki</span>
         </a>
 
